--- a/default-pod-template.yaml
+++ b/default-pod-template.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -6,16 +5,19 @@ metadata:
   namespace: tekton-pipelines
 data:
   podTemplate: |
-    securityContext:
-      runAsUser: 1000
-      runAsNonRoot: true
-      fsGroup: 1000
-    containers:
-    - name: "*"
+    apiVersion: v1
+    kind: PodTemplate
+    spec:
       securityContext:
-        allowPrivilegeEscalation: false
-        capabilities:
-          drop:
-            - "ALL"
-        seccompProfile:
-          type: RuntimeDefault
+        runAsUser: 1000
+        runAsNonRoot: true
+        fsGroup: 1000
+      containers:
+      - name: "*"
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - "ALL"
+          seccompProfile:
+            type: RuntimeDefault
